--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,13 @@
 # Editor configuration, see https://editorconfig.org
 root = true
-
+quote_type = single
 [*]
 charset = utf-8
 indent_style = space
 indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
+
 
 [*.md]
 max_line_length = off
